--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,13 +2,21 @@
     background-color: rgba(255,255,255, 0.8);
     position:fixed;
     height:100%;
-
     width:100%;
     top:0;
     left:0;
     display:flex;
     align-items: center;
     justify-content: center;
-    width:400px;
+}
 
+.modal-close {
+    font-size:3rem;
+    font-style:bold;
+    cursor:pointer;
+}
+
+.modal-close:hover{
+    color:gray;
+    cursor:pointer;
 }
